--- a/package.json
+++ b/package.json
@@ -17,13 +17,10 @@
     "axios": "^0.18.0",
     "axios-https-proxy-fix": "^0.17.1",
     "buefy": "^0.6.6",
-    "css-loader": "^1.0.0",
     "iview": "^3.0.0",
     "node-sass": "^4.9.3",
     "nuxt": "latest",
-    "nuxt-buefy": "^0.1.0",
-    "sass-loader": "^7.1.0",
-    "vue-style-loader": "^4.1.1"
+    "nuxt-buefy": "^0.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
@@ -32,6 +29,9 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
     "less": "^3.8.1",
-    "less-loader": "^4.1.0"
+    "less-loader": "^4.1.0",
+    "css-loader": "^1.0.0",
+    "sass-loader": "^7.1.0",
+    "vue-style-loader": "^4.1.1"
   }
 }
