--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "nuxt": {
       "host": "0.0.0.0",
       "port": "3000"
-      }
+    }
   },
   "scripts": {
     "dev": "nuxt",
@@ -30,13 +30,16 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^1.0.0",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "css-loader": "^1.0.0",
     "sass-loader": "^7.1.0",
     "vue-style-loader": "^4.1.1"
   }
