--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.18.0",
     "axios-https-proxy-fix": "^0.17.1",
     "buefy": "^0.6.6",
+    "clipboard": "^2.0.1",
     "iview": "^3.0.0",
     "node-sass": "^4.9.3",
     "nuxt": "latest",
