--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "axios": "^0.18.0",
     "axios-https-proxy-fix": "^0.17.1",
     "buefy": "^0.6.6",
+    "chart.js": "^2.7.2",
     "clipboard": "^2.0.1",
     "iview": "^3.0.0",
     "node-sass": "^4.9.3",
     "nuxt": "latest",
-    "nuxt-buefy": "^0.1.0"
+    "nuxt-buefy": "^0.1.0",
+    "vue-chartjs": "^3.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
