--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "buefy": "^0.6.6",
     "chart.js": "^2.7.2",
     "clipboard": "^2.0.1",
+    "echarts": "^4.1.0",
     "iview": "^3.0.0",
     "node-sass": "^4.9.3",
     "nuxt": "latest",
     "nuxt-buefy": "^0.1.0",
+    "v-charts": "^1.17.10",
     "vue-chartjs": "^3.4.0"
   },
   "devDependencies": {
