--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "clipboard": "^2.0.1",
     "echarts": "^4.1.0",
     "iview": "^3.0.0",
-    "nuxt": "latest",
+    "nuxt": "^1.4.2",
     "nuxt-buefy": "^0.1.0",
     "v-charts": "^1.17.10",
     "vue-chartjs": "^3.4.0"
